tests/rosetta/out/Pascal/call-a-function-11.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T10:01:31Z
program CallAFunction11;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

function zeroval(ival: integer): integer;
var
  x: Variant;
begin
  x := ival;
  x := 0;
  result := x;
  exit;
end;

function zeroptr(ref: specialize TArray<integer>): integer;
begin
  ref[0] := 0;
end;

function main(): integer;
var
  box: specialize TArray<Variant>;
  i: integer;
  tmp: Variant;
begin
  i := 1;
  writeln('initial: ' + IntToStr(i));
  tmp := zeroval(i);
  writeln('zeroval: ' + IntToStr(i));
  box := specialize TArray<Variant>([i]);
  zeroptr(box);
  i := box[0];
  writeln('zeroptr: ' + IntToStr(i));
  writeln('pointer: 0');
end;

begin
  main();
end.
